--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,37 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Tajr</string>
+
+    <string name="calc_dialog_clear">Clear</string>
+    <string name="calc_dialog_cancel">Cancel</string>
+    <string name="calc_dialog_ok">OK</string>
+
+    <string name="calc_answer">Ans</string>
+
+    <string-array name="calc_dialog_errors">
+        <item>Division by zero</item>
+        <item>Out of bounds</item>
+        <item>Result must be positive</item>
+        <item>Result must be negative</item>
+    </string-array>
+
+
+
+    <string name="open_dialog">Open dialog</string>
+    <string name="result_value">Result</string>
+    <string name="result_value_none">None</string>
+    <string name="calc_settings">Calculator settings</string>
+
+    <string name="option_sign">Sign can be changed</string>
+    <string name="option_sign_show_btn">Show sign button</string>
+    <string name="option_answer_btn">Show answer button</string>
+    <string name="option_clear_operation">Clear display on operation button click</string>
+    <string name="option_show_zero">Show zero when there is no value</string>
+    <string name="option_max_value">Maximum value:</string>
+    <string name="option_max_int">Maximum integer digits:</string>
+    <string name="option_max_frac">Maximum fractional digits:</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -31,7 +63,7 @@
     <string name="logout">Logout</string>
     <string name="wati_to_log_in">Login...</string>
     <string name="Product">Product</string>
-    <string name="stause">Statuse</string>
+    <string name="stause">Status</string>
     <string name="client_name">Client name</string>
     <string name="client_address">Client address</string>
     <string name="client_area">Client area</string>
@@ -144,5 +176,12 @@
     <string name="shipping_state">Shipping state</string>
     <string name="discount">Discount</string>
     <string name="no_internet">No Internet connection</string>
+    <string name="request">Request</string>
+    <string name="request_money">Request money</string>
+    <string name="balance_history">Balance history</string>
+    <string name="availabl_balance">Available Balance</string>
+    <string name="time">Time</string>
+    <string name="Balance">Balance</string>
+    <string name="calculator">Calculator</string>
 
 </resources>
