--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -154,6 +154,17 @@
     <string name="copy">نسخ</string>
     <string name="available_balance">الرصيد المتاح</string>
     <string name="omla">جنية</string>
-    <string name="admin_login">Admin login</string>
+    <string name="admin_login">تجسيل دخول الادمن</string>
+    <string name="amin_records">تسجيلات الادمن</string>
+    <string name="all_ecords">كل التسجيلات</string>
+    <string name="new_card">كارت جديد</string>
+    <string name="consumption">الاستهلاك</string>
+    <string name="card_expiration_time">مدة صلاحية انتهاء الكارت</string>
+    <string name="the_remaining_amount_of_card">الكمية المستخدمة من الكارت</string>
+    <string name="remaining">متبقي</string>
+    <string name="minute">دقيقة</string>
+    <string name="expired">تم انتهاء</string>
+    <string name="used">استخدمت</string>
+    <string name="cards">كروت الشحن</string>
 
 </resources>
