--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,5 +225,10 @@
     <string name="show_missed_call_view">Show missed call view</string>
     <string name="shipping_cost">Shipping cost</string>
     <string name="order">Order</string>
+    <string name="delete_product">Delete product</string>
+    <string name="do_you_want_to_delete_this_product">Do you want to delete this product</string>
+    <string name="no_extra_products">No extra Products</string>
+    <string name="show_notification">Show notification</string>
+    <string name="product_cost">Product cost</string>
 
 </resources>
