--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -208,5 +208,7 @@
     <string name="shipping_status_history">حالات شحن الطلب</string>
     <string name="deliver">توصيل الطلب</string>
     <string name="return_order">ارجاع الطلب</string>
+    <string name="notallowed">You are not allowed here</string>
+    <string name="some_thing_went_wrong">Some thing went wrong</string>
 
 </resources>
