--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,5 +252,7 @@
     <string name="return_order">Return order</string>
     <string name="notallowed">You are not allowed here</string>
     <string name="some_thing_went_wrong">Some thing went wrong</string>
+    <string name="invalid_ph_num">The Mobile number you Entered is Invalid</string>
+    <string name="added_success">Added successfully</string>
 
 </resources>
