--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -215,5 +215,6 @@
     <string name="fetching_th_order">جار جلب الطلب</string>
     <string name="no_more_orders">لا يوجد المزيد من الطلبات</string>
     <string name="retry">اعادة المحاولة</string>
+    <string name="product_details">تفاصيل الطلب</string>
 
 </resources>
