feat:show tajr bubble on screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,5 +261,6 @@
     <string name="le">LE</string>
     <string name="for_shipping">For shipping</string>
     <string name="phone_boot">Phone bot</string>
+    <string name="tajr_bubble">tajr bubble</string>
 
 </resources>
