--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -220,5 +220,6 @@
     <string name="for_shipping">للشحن</string>
     <string name="phone_boot">Phone bot</string>
     <string name="Return">رجع</string>
+    <string name="edit_order">Edit The Order</string>
 
 </resources>
