--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,5 +262,6 @@
     <string name="for_shipping">For shipping</string>
     <string name="phone_boot">Phone bot</string>
     <string name="tajr_bubble">tajr bubble</string>
+    <string name="edit_order">Edit The Order</string>
 
 </resources>
