change design of prododucr spinner item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,5 +262,6 @@
     <string name="for_shipping">For shipping</string>
     <string name="phone_boot">Phone bot</string>
     <string name="tajr_bubble">tajr bubble</string>
+    <string name="dummy_product">حذاء رياضي قماش شبكي برباط وبطانة مختلفة اللون للرجال من اوكس - رمادي</string>
 
 </resources>
