--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,7 +262,7 @@
     <string name="for_shipping">For shipping</string>
     <string name="phone_boot">Phone bot</string>
     <string name="tajr_bubble">tajr bubble</string>
-    <string name="dummy_product">حذاء رياضي قماش شبكي برباط وبطانة مختلفة اللون للرجال من اوكس - رمادي</string>
-    <string name="accessibility_dialog_message">Accessibilit service is disabled \n  please go and enable tajr accessibility Service</string>
+    <string name="dummy_product">red soes with great quality size 38</string>
+    <string name="accessibility_dialog_message">Accessibility service is disabled \n  please go and enable tajr accessibility Service</string>
 
 </resources>
