feat:add new cancellation reason

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,5 +267,6 @@
     <string name="edit_order">Edit The Order</string>
     <string name="order_cancelation_reason_label">Order Cancelation Reason</string>
     <string name="sample_cancellation_reason">the product does not look like image</string>
+    <string name="submit_other_reason">submit other reason</string>
 
 </resources>
