--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -222,6 +222,8 @@
     <string name="Return">رجع</string>
     <string name="edit_order">Edit The Order</string>
     <string name="accessibility_dialog_message">  برجاء تفعيل ال accessibility serveice  من الاعدادات</string>
+    <string name="enter_valid_quantity">قم بادخال قيمه صحيحه للكميه</string>
+
 
 
 </resources>
