show default hint on spinner add a product

--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -223,7 +223,7 @@
     <string name="edit_order">Edit The Order</string>
     <string name="accessibility_dialog_message">  برجاء تفعيل ال accessibility serveice  من الاعدادات</string>
     <string name="enter_valid_quantity">قم بادخال قيمه صحيحه للكميه</string>
-
+    <string name="add_product_to_order">اضف منتج </string>
 
 
 </resources>
