check internet connectivity before sending work time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,5 +270,6 @@
     <string name="submit_other_reason">submit other reason</string>
     <string name="enter_valid_quantity">enter valid quantity</string>
     <string name="add_product_to_order">Add product</string>
+    <string name="no_connection_message">there no  internet connection</string>
 
 </resources>
