--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,5 +271,8 @@
     <string name="enter_valid_quantity">enter valid quantity</string>
     <string name="add_product_to_order">Add product</string>
     <string name="no_connection_message">there no  internet connection</string>
+    <string name="adding_reason_to_order_error">Error adding reason to Order</string>
+    <string name="adding_new_reason_to_order_error">Error adding new Reason</string>
+    <string name="error_has_occured">An Error has Occured , please try again</string>
 
 </resources>
