--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -278,6 +278,6 @@
     <string name="empty_cart_message">your cart is empty , choose your products</string>
     <string name="error_placing_order">Error Placing Order</string>
     <string name="wrong_item_quantity_warning">item_number can not be zero</string>
-    <string name="over_discount_warning">discount cannot be more than 100 percent</string>
+    <string name="over_discount_warning">discount cannot be more than total price</string>
 
 </resources>
