--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -224,6 +224,8 @@
     <string name="accessibility_dialog_message">  برجاء تفعيل ال accessibility serveice  من الاعدادات</string>
     <string name="enter_valid_quantity">قم بادخال قيمه صحيحه للكميه</string>
     <string name="add_product_to_order">اضف منتج </string>
+    <string name="update_product">تحديث المنتج</string>
+
 
 
 </resources>
