feat:handle product quantity in update product dialog

--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -225,6 +225,8 @@
     <string name="enter_valid_quantity">قم بادخال قيمه صحيحه للكميه</string>
     <string name="add_product_to_order">اضف منتج </string>
     <string name="update_product">تحديث المنتج</string>
+    <string name="products">المنتجات</string>
+
 
 
 
