--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,6 +277,7 @@
     <string name="complete_fields_error">please complete all fields</string>
     <string name="show_bubble">show Bubble</string>
     <string name="update_product">update Product</string>
+    <string name="products">Products</string>
     <string-array name="calc_dialog_errors">
         <item>Division by zero</item>
         <item>Out of bounds</item>
