feat:implement add product dialog in current order fragment

--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -223,10 +223,14 @@
     <string name="edit_order">Edit The Order</string>
     <string name="accessibility_dialog_message">  برجاء تفعيل ال accessibility serveice  من الاعدادات</string>
     <string name="enter_valid_quantity">قم بادخال قيمه صحيحه للكميه</string>
+    <string name="zero_quantity">كميه المنتج لابد ان تكون واحد على الاقل</string>
+    <string name="complete_fields_error">برجاء اكمال جميع الحقول</string>
+
     <string name="add_product_to_order">اضف منتج </string>
     <string name="update_product">تحديث المنتج</string>
     <string name="products">المنتجات</string>
-
+    <string name="product_added_to_cart" >تم اضافه المنتج بنجاح</string>
+    <string name="already_in_cart" >المنتج موجود مسبقا فى السله</string>
 
 
 
