--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,6 +263,7 @@
     <string name="sample_cancellation_reason">the product does not look like image</string>
     <string name="submit_other_reason">submit other reason</string>
     <string name="enter_valid_quantity">enter valid quantity</string>
+    <string name="zero_quantity">product quantity must be one at least</string>
     <string name="add_product_to_order">Add product</string>
     <string name="no_connection_message">there no  internet connection</string>
     <string name="adding_reason_to_order_error">Error adding reason to Order</string>
@@ -279,6 +280,8 @@
     <string name="show_bubble">show Bubble</string>
     <string name="update_product">update Product</string>
     <string name="products">Products</string>
+    <string name="product_added_to_cart" >product was added to cart</string>
+    <string name="already_in_cart" >product is already in cart</string>
     <string-array name="calc_dialog_errors">
         <item>Division by zero</item>
         <item>Out of bounds</item>
